--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ footer h6 {
 }
 
 @media (min-width: 769px) {
+    
     .feature-flex {
         padding: 45vh 0 4em 4em;
 
@@ -235,5 +236,8 @@ footer h6 {
         width: 20%;
         height: 20%;
         margin-right: 2em;
+    }
+    .feature {
+        max-width: 900px;
     }
 }
